fixed modal  no scroll issue on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,12 @@ header {
 .modal-content {
   padding: 1%;
 }
+
+.overflow {
+  max-height: 80vh;
+  overflow-y: auto!important;
+}
+
 .modal-body ul {
   list-style: none;
   display: block;
